Fix about.html/css spacing from headeer to ceo-img
Now spacing works on varying screen sizes and doesn't cutt of the top of ceo-img.

Moving onto adding content to index.html, now should finally be done with about page.

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -128,13 +128,14 @@
    ============================================ */
 .img-pos {
     text-align: center;
+    padding-top: 75px;
 }
 
 .autobio {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
+    gap: 15px;
     width: 100%;
     max-width: 600px;
 }
@@ -152,7 +153,7 @@
     text-align: center;
     background-color: #C0C0C0;
     border: 3px solid #000;
-    padding: 30px 50px;
+    padding: 10px 50px;
     border-radius: 36px;
     width: 100%;
 }
